# llmitm_v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: atomDebug.json  no-hooks.json  settings.json  tags.conf
.claude/agents/: atom.md
.claude/analysis/: dataFlows.md  dependencies.md  frameworks.md  libraries.md  majorInputs.md  majorOutputs.md  overallProject.md
.claude/docs/anthropic/: Anthropic_Onboarding_Guide.md  CLAUDE.md  analyze_urls.py  anthropic_docs_ingester.py  implement_tool_use.md  llms.txt
.claude/docs/anthropic/api_reference/: CLAUDE.md  admin.md  api_keys.md  api_overview_api_overview.md  archive_workspace.md  batches.md  batches_beta_csharp.md  beta_beta_csharp.md  beta_headers.md  c_sdk.md  cancel_a_message_batch.md  cancel_a_message_batch_beta.md  completions.md  cost_report.md  count_tokens_in_a_message.md  count_tokens_in_a_message_beta_csharp.md  (+80 more)
.claude/docs/mitmproxy/: api_research.md  mitmproxy_Onboarding_Guide.md
.claude/docs/neo4j/: Neo4j_Onboarding_Guide.md
.claude/docs/strands/: Strands_Onboarding_Guide.md
.claude/hooks/: ctags-arch.sh  query-atomization.sh
.claude/memory/: activeContext.json  activeContext.md  neo4jSchema.md  projectBrief.md  projectProgress.md  strandsGuide.md  systemPatterns.md  tags.md  techContext.md
.claude/prompts/: 1-projectPrompt.md  2-frameworkPrompt.md  3-libraryPrompt.md  4-dependencyPrompt.md  5-inputPrompt.md  6-outputPrompt.md  7-dataFlowPrompt.md
.claude/rules/: testing.md
.claude/skills/anthropic-sdk/: SKILL.md
.claude/skills/mitmproxy-reference/: SKILL.md
.claude/skills/neo4j-reference/: SKILL.md
demo/: dvwa.mitm  juice_shop.mitm  juice_shop_traffic.txt  nodegoat.mitm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BrainGraph.tsx  CompilePanel.tsx  Legend.tsx  SystemPanel.tsx
frontend/src/lib/: sse-client.ts
llmitm_v2/: __init__.py  __main__.py  config.py  constants.py  debug_logger.py  fingerprinter.py  target_profiles.py  wsgi.py
llmitm_v2/capture/: __init__.py  addon.py  flows.json  launcher.py
llmitm_v2/handlers/: __init__.py  base.py  http_request_handler.py  regex_match_handler.py  registry.py  shell_command_handler.py
llmitm_v2/hooks/: __init__.py  approval_hook.py
llmitm_v2/models/: __init__.py  action_graph.py  context.py  critic.py  events.py  finding.py  fingerprint.py  recon.py  step.py
llmitm_v2/monitor/: server.py
llmitm_v2/orchestrator/: __init__.py  agents.py  context.py  failure_classifier.py  orchestrator.py
llmitm_v2/repository/: __init__.py  graph_repository.py  setup_schema.py
llmitm_v2/tools/: __init__.py  exploit_tools.py  graph_tools.py  recon_tools.py
scripts/: break-graph.sh  export-snapshot.sh  fix-graph.sh  reset-graph.sh  restore-snapshot.sh  seed-demo-graph.py
skills/: initial_recon.md  lateral_movement.md  mitmdump.md  persistence.md  recon_tools.md
tests/: __init__.py  test_fingerprinter.py  test_graph_repository.py  test_handlers.py  test_models.py  test_orchestrator.py  test_orchestrator_main.py  test_recon_models.py  test_target_profiles.py
(+229 files in other folders)
