[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmitm-v2"
version = "0.1.0"
description = "Autonomous pentesting agent with ActionGraph compilation and self-repair"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "LLMitM Team", email = "team@llmitm.dev"},
]
license = {text = "MIT"}

dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
    "ipython>=8.0",
]

[tool.setuptools]
packages = ["llmitm_v2"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W291",  # trailing whitespace (handled by formatter)
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
